--- a/Membus.WpfTwitterClient/MainWindow.xaml
+++ b/Membus.WpfTwitterClient/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Membus.Tests.WpfClient.MainWindow"
+﻿<Window x:Class="Membus.WpfTwitterClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
