--- a/Membus.WpfTwitterClient/ShellView.xaml
+++ b/Membus.WpfTwitterClient/ShellView.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="Membus.WpfTwitterClient.MainWindow"
+﻿<Window x:Class="Membus.WpfTwitterClient.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+    <StackPanel>
+        <TextBox x:Name="Test" />
+        <Button>Hi</Button>
+    </StackPanel>
 </Window>
