Fiddling in HelloWorld, MemBus: Observable now correctly supports multiple observers

--- a/Membus.WpfTwitterClient/GatherAccessToken/GetAccessTokenView.xaml
+++ b/Membus.WpfTwitterClient/GatherAccessToken/GetAccessTokenView.xaml
@@ -15,7 +15,7 @@
         <Frame Source="{Binding SourceUrl}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="Navigated">
-                    <cal:ActionMessage MethodName="TwitterLoginloaded" />
+                    <cal:ActionMessage MethodName="TwitterLoginLoaded" />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </Frame>
