--- a/Membus.WpfTwitterClient/ShellView.xaml
+++ b/Membus.WpfTwitterClient/ShellView.xaml
@@ -1,13 +1,23 @@
 ﻿<Window x:Class="Membus.WpfTwitterClient.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
+        xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro" Title="MainWindow" Height="350" Width="525">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <cal:ActionMessage MethodName="AquaintWithAdornerLayer">
+                <cal:Parameter Value="{Binding ElementName=ActiveItem}" />
+            </cal:ActionMessage>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="20" />
+            <RowDefinition Height="10" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0">Hi</TextBlock>
-        <ContentControl x:Name="ActiveItem" Grid.Row="1" />
+        <TextBlock Grid.Row="0"></TextBlock>
+        <AdornerDecorator Grid.Row="1">
+          <ContentControl x:Name="ActiveItem" />
+        </AdornerDecorator>
     </Grid>
 </Window>
