--- a/Membus.WpfTwitterClient/ShellView.xaml
+++ b/Membus.WpfTwitterClient/ShellView.xaml
@@ -1,17 +1,24 @@
 ﻿<Window x:Class="Membus.WpfTwitterClient.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
-        xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro" 
-        Title="MainWindow" Height="400" Width="1010">
+        xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro" xmlns:UI="clr-namespace:Membus.WpfTwitterClient.Frame.UI" Title="MainWindow" Height="400" Width="1010" Background="{StaticResource ResourceKey=WindowBackgroundBrush}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1" />
             <RowDefinition />
+            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
         
-        <AdornerDecorator Grid.Row="1">
-            <ContentControl x:Name="ActiveItem" cal:Message.Attach="[Event Loaded] = [Action AquaintWithAdornerLayer($source)]" />
-        </AdornerDecorator>
+        <ContentControl Grid.Row="1" x:Name="ActiveItem" />
+        
+        <StatusBar Grid.Row="2" Style="{StaticResource ResourceKey=StatusbarStyle}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <UI:GifImage Grid.Column="1" GifUri="pack://application:,,,/Resources/wait.gif" FramesPerSecond="5" />
+            </Grid>
+        </StatusBar>
     </Grid>
 </Window>
