--- a/Membus.WpfTwitterClient/ShellView.xaml
+++ b/Membus.WpfTwitterClient/ShellView.xaml
@@ -1,23 +1,28 @@
 ﻿<Window x:Class="Membus.WpfTwitterClient.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-        xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro" xmlns:UI="clr-namespace:Membus.WpfTwitterClient.Frame.UI" Title="MainWindow" Height="400" Width="1010" Background="{StaticResource ResourceKey=WindowBackgroundBrush}">
+        xmlns:UI="clr-namespace:Membus.WpfTwitterClient.Frame.UI" 
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
+        Title="MainWindow" Height="495" Width="1010" Background="{StaticResource ResourceKey=WindowBackgroundBrush}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1" />
             <RowDefinition />
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="35"/>
         </Grid.RowDefinitions>
         
         <ContentControl Grid.Row="1" x:Name="ActiveItem" />
         
         <StatusBar Grid.Row="2" Style="{StaticResource ResourceKey=StatusbarStyle}" HorizontalAlignment="Stretch">
             <StatusBarItem HorizontalContentAlignment="Right">
-                <StackPanel Orientation="Horizontal" Visibility="{Binding IsBusy, Converter={StaticResource ResourceKey=BoolToVisibility}, ConverterParameter=Collapsed}">
-                    <Label Margin="5 0" x:Name="BusyMessage" />
-                    <UI:GifImage Grid.Column="1" GifUri="pack://application:,,,/Resources/wait.gif" FramesPerSecond="5" DockPanel.Dock="Right" />
+                <StackPanel Orientation="Horizontal" Visibility="{Binding IsBusy, Mode=OneWay, Converter={StaticResource ResourceKey=BoolToVisibility}, ConverterParameter=Collapsed}">
+                    <i:Interaction.Behaviors>
+                        <UI:FadeInOutBehaviour />
+                    </i:Interaction.Behaviors>
+                    <Label Margin="5 0" x:Name="BusyMessage">Negotiating with Twitter</Label>
+                    <UI:GifImage Margin="0 3" Grid.Column="1" GifUri="pack://application:,,,/Resources/wait.gif" FramesPerSecond="5" DockPanel.Dock="Right" />
                 </StackPanel>
-            </StatusBarItem>            
+            </StatusBarItem>
         </StatusBar>
     </Grid>
 </Window>
