Starting integration of integration button

--- a/Membus.WpfTwitterClient/App.xaml
+++ b/Membus.WpfTwitterClient/App.xaml
@@ -11,6 +11,7 @@
                 </ResourceDictionary>
                 <ResourceDictionary Source="Resources/ExpressionDark.xaml" />
                 <ResourceDictionary Source="Resources/Local.xaml" />
+                <ResourceDictionary Source="Resources/InteractionButtonResources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
