--- a/Membus.WpfTwitterClient/Frame/UI/InteractionButton.xaml
+++ b/Membus.WpfTwitterClient/Frame/UI/InteractionButton.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:UI="clr-namespace:Membus.WpfTwitterClient.Frame.UI" mc:Ignorable="d"
              >
     <UserControl.Resources>
         <!-- Used from code-behind, ignore resharper warning -->
@@ -36,7 +36,11 @@
                 <Border.LayoutTransform>
                     <ScaleTransform ScaleX="0" ScaleY="0" CenterX="0.5" CenterY="1" />
                 </Border.LayoutTransform>
-                <ContentControl x:Name="popupContainer" />
+                <ContentControl x:Name="popupContainer" Content="{Binding}">
+                    <ContentControl.ContentTemplateSelector>
+                        <UI:InteractionButtonTemplateSelector />
+                    </ContentControl.ContentTemplateSelector>
+                </ContentControl>
             </Border>
         </Popup>
         <Button x:Name="button" MouseEnter="onButtonMouseEnter" MouseLeave="onButtonMouseLeave" Margin="5 0" Padding="2">
