--- a/Membus.WpfTwitterClient/Resources/Local.xaml
+++ b/Membus.WpfTwitterClient/Resources/Local.xaml
@@ -1,4 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:UI="clr-namespace:Membus.WpfTwitterClient.Frame.UI">
     <UI:BoolToVisibilityConverter x:Key="BoolToVisibility" />
+    <Style x:Key="AttentionLabel" TargetType="{x:Type Label}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="Black" />
+    </Style>
+    <Style x:Key="Check" TargetType="{x:Type ContentControl}" >
+        <Setter Property="Content">
+            <Setter.Value>
+                <Image Source="pack://application:,,,/Resources/check.png" /> 
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
